solving css issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
    
     <title>Shahzeb</title>
-    <link rel="stylesheet" href="/HTML-MY SITE/CSS-MY SITE/styles.css">
+    <link rel="stylesheet" href="/CSS-MY SITE/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
