--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="profile">
           <img src="images/programmer (1).png" alt="coder">
           <h2>Hello.</h2>
-          <p>I am Fast Ungergraduate currently atudying in 7th semester. My Hobbies are to code, debug errors and playing chess board game.I also like to travel it gives me creative ideas. </p>
+          <p>I am Fast Ungergraduate currently studying in 7th semester. My Hobbies are to code, debug errors and playing chess board game.I also like to travel it gives me creative ideas. </p>
         </div>
         
         <div class="skills">
